add EMAIL_SUB_PREFIX in email bodies as well

--- a/templates/email/confirm_change.html
+++ b/templates/email/confirm_change.html
@@ -41,7 +41,7 @@
 </style>
 <body class="wrapper">
 <div class="container">
-    <h3 class="header">{{ header }} - {{ pub_url }}</h3>
+    <h3 class="header">{{ header }} {{ email_sub_prefix }}</h3>
     <div style="text-align: left">
         <div style="margin-bottom: .35em;">{{ msg }}</div>
         <div>{{ email_changed_to }}</div>
