--- a/templates/email/change_info_new.html
+++ b/templates/email/change_info_new.html
@@ -64,7 +64,7 @@
 </style>
 <body class="wrapper">
 <div class="container">
-    <h3 class="header">{{ header }} {{ pub_url }}</h3>
+    <h3 class="header">{{ header }} {{ email_sub_prefix }}</h3>
     <div style="text-align: left">
         <div style="margin-bottom: .35em;">{{ click_link }}</div>
         <div>{{ validity }}</div>
