add EMAIL_SUB_PREFIX to each email template

--- a/templates/email/reset_info.html
+++ b/templates/email/reset_info.html
@@ -48,7 +48,7 @@
 </style>
 <body class="wrapper">
   <div class="container">
-    <h3 class="header">{{ expires_1 }} {{ pub_url }}<br>{{ expires_2 }} {{ exp }}</h3>
+    <h3 class="header">{{ expires_1 }} {{ email_sub_prefix }}<br>{{ expires_2 }} {{ exp }}</h3>
     <div style="text-align: left">
       <div style="margin-bottom: .35em;">
         {{ update }}
