change event template to only include IP if exists

--- a/templates/email/event.html
+++ b/templates/email/event.html
@@ -46,7 +46,7 @@
         <div style="margin-bottom: .35em;">{{ ts }}</div>
         <div>{{ typ }}</div>
         <div style="margin-bottom: .35em;">{{ data }}</div>
-        <div>Remote IP: {{ ip }}</div>
+        <div>{{ ip }}</div>
     </div>
 </div>
 </body>
