re-design Event Notification structure to make it work

--- a/templates/email/event.html
+++ b/templates/email/event.html
@@ -41,12 +41,10 @@
 </style>
 <body class="wrapper">
 <div class="container">
-    <h3 class="header">{{ email_sub_prefix }} - {{ level }}</h3>
+    <h3 class="header">{{ head }}</h3>
     <div style="text-align: left">
-        <div style="margin-bottom: .35em;">{{ ts }}</div>
-        <div>{{ typ }}</div>
-        <div style="margin-bottom: .35em;">{{ data }}</div>
-        <div>{{ ip }}</div>
+        <div>{{ row_1 }}</div>
+        <div>{{ row_2 }}</div>
     </div>
 </div>
 </body>
