--- a/templates/email/event.html
+++ b/templates/email/event.html
@@ -25,14 +25,12 @@
     .wrapper {
         display: flex;
         align-items: center;
-        justify-content: center;
-        background-color: #DFE0E2;
         color: rgba(34, 30, 34, .8);
     }
 
     .container {
         flex-direction: column;
-        padding: 3em 5em;
+        padding: 2rem;
     }
 
     .header {
