--- a/templates/email/reset.html
+++ b/templates/email/reset.html
@@ -22,6 +22,14 @@
         text-decoration: none;
     }
 
+    a:link, a:visited {
+        color: #f2f2f2;
+    }
+
+    a:hover, a:active {
+        color: white;
+    }
+
     .wrapper {
         display: flex;
         align-items: center;
@@ -48,7 +56,6 @@
         font-size: 1.05em;
         font-weight: bold;
         cursor: pointer;
-        color: #f2f2f2;
         background: #388c51;
         border-radius: 3px;
         box-shadow: 2px 2px 2px #b2b2b2;
@@ -56,7 +63,6 @@
 
     .submitButton:hover {
         background: #4d8c62;
-        color: white;
         box-shadow: 2px 2px 3px 1px #b2b2b2;
     }
 </style>
