--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -1,13 +1,3 @@
-/*
-Some lines are out-commented until all components have been updated properly.
-These need to be taken into account again after the migration to the new theme
-has been finished:
-
-- body line height and colors
-- h1, h2, h3, h4, h5, h6 color
-- global input settings
- */
-
 /* CSS Reset */
 *, *::before, *::after {
     box-sizing: border-box;
@@ -16,7 +6,6 @@ has been finished:
 * {
     margin: 0;
     padding: 0;
-    /*box-sizing: border-box;*/
 }
 
 ::selection {
@@ -28,8 +17,7 @@ input, button, textarea, select {
     font: inherit;
 }
 
-/* Try to uniform scrollbar at least a bit */
-
+/* Try to uniform scrollbars at least a bit */
 ::-webkit-scrollbar {
     width: 7px;
     height: 7px;
@@ -52,14 +40,13 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     /*line-height: 1.5rem;*/
-    /*color: hsl(var(--text));*/
-    /*background-color: hsl(var(--bg));*/
+    color: hsl(var(--text));
+    background-color: hsl(var(--bg));
     scroll-behavior: smooth;
     scrollbar-gutter: stable;
     overflow: auto;
 
     display: flex;
-
     --animate-zoom: zoomIn 250ms cubic-bezier(0.34, 1.56, 0.64, 1);
     --din-a4-width: 595pt;
     --din-a4-height: 842pt;
@@ -83,7 +70,7 @@ blockquote {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    /*color: hsl(var(--text-high));*/
+    color: hsl(var(--text-high));
     overflow-wrap: break-word;
 }
 
@@ -268,38 +255,36 @@ hr {
 
 label[data-required="true"]:after {
     content: ' *';
-    color: hsla(var(--error), .9);
+    color: hsla(var(--error) / .9);
 }
 
-/* out-commented until the legacy inputs are fixed */
+input {
+    width: 100%;
+    margin: .33rem 0;
+    padding: .25rem .5rem;
+    background: hsl(var(--bg));
+    border: none;
+    border-radius: var(--border-radius) var(--border-radius) 0 0;
+    color: hsl(var(--text));
+    font-size: 1.05rem;
+    outline: none;
+}
 
-/*input {*/
-/*    width: 100%;*/
-/*    margin: .33rem 0;*/
-/*    padding: .25rem .5rem;*/
-/*    background: hsl(var(--bg));*/
-/*    border: none;*/
-/*    border-radius: var(--border-radius) var(--border-radius) 0 0;*/
-/*    color: hsl(var(--text));*/
-/*    font-size: 1.05rem;*/
-/*    outline: none;*/
-/*}*/
+input:valid {
+    border-bottom: 1px solid hsla(var(--text) / .35);
+}
 
-/*input:valid {*/
-/*    border-bottom: 1px solid hsla(var(--text), .35);*/
-/*}*/
+input:invalid {
+    border-bottom: 1px solid hsl(var(--error));
+}
 
-/*input:invalid {*/
-/*    border-bottom: 1px solid hsl(var(--error));*/
-/*}*/
+input:disabled {
+    background: hsl(var(--bg-high));
+}
 
-/*input:disabled {*/
-/*    background: hsl(var(--bg-high));*/
-/*}*/
-
-/*input:hover, input:focus {*/
-/*    background: hsla(var(--bg-high), .15);*/
-/*}*/
+input:hover, input:focus {
+    background: hsla(var(--bg-high) / .15);
+}
 
 .fade-in {
     animation: fadeIn 200ms;
