--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -288,12 +288,13 @@ input:invalid {
     border-bottom: 1px solid hsl(var(--error));
 }
 
-input:disabled {
-    background: hsl(var(--bg-high));
-}
-
 input:hover, input:focus {
     background: hsla(var(--bg-high) / .15);
+}
+
+input:disabled {
+    background: hsl(var(--bg-high));
+    cursor: not-allowed;
 }
 
 .fade-in {
