match the theme to the new logo

--- a/frontend/src/css/theme.css
+++ b/frontend/src/css/theme.css
@@ -10,13 +10,13 @@ body {
     https://coolors.co/e8ebf7-010b14-ffa630-5448c8-bf3100
     HSL values without hsl() wrapper
     */
-    --text: 208, 10%, 40%;
-    --text-high: 208, 20%, 20%;
-    --bg: 228, 2%, 98%;
-    --bg-high: 228, 8%, 84%;
-    --action: 34, 100%, 59%;
-    --accent: 246, 60%, 53%;
-    --error: 15, 100%, 37%;
+    --text: 200 5% 37%;
+    --text-high: 200 15% 25%;
+    --bg: 34 25% 97%;
+    --bg-high: 34 20% 90%;
+    --action: 34 100% 59%;
+    --accent: 246 60% 53%;
+    --error: 15 100% 37%;
 
     /*
     Specific colors must work on their own
@@ -38,10 +38,10 @@ Must be the same as in @media (prefers-color-scheme: dark) -> body
 */
 @media (prefers-color-scheme: light) {
     .theme-dark {
-        --text: 228, 2%, 70%;
-        --text-high: 228, 8%, 90%;
-        --bg: 208, 90%, 4%;
-        --bg-high: 208, 30%, 19%;
+        --text: 34 5% 75%;
+        --text-high: 34 7% 90%;
+        --bg: 200 40% 6%;
+        --bg-high: 200 20% 17%;
         --btn-text: hsl(var(--bg));
     }
 }
@@ -54,13 +54,13 @@ Must be the same as in @media (prefers-color-scheme: dark) -> body
         Default colors
         HSL values without hsl() wrapper
         */
-        --text: 228, 2%, 70%;
-        --text-high: 228, 8%, 90%;
-        --bg: 208, 90%, 4%;
-        --bg-high: 208, 30%, 19%;
-        --action: 34, 100%, 59%;
-        --accent: 246, 60%, 53%;
-        --error: 15, 100%, 37%;
+        --text: 34 5% 75%;
+        --text-high: 34 7% 90%;
+        --bg: 200 40% 6%;
+        --bg-high: 200 20% 17%;
+        --action: 34 100% 59%;
+        --accent: 246 60% 53%;
+        --error: 15 100% 37%;
 
         /*
         Specific colors must work on their own
@@ -76,10 +76,10 @@ Must be the same as in @media (prefers-color-scheme: dark) -> body
     Must be the same as in body (non prefers-color-scheme: dark)
     */
     .theme-light {
-        --text: 208, 10%, 40%;
-        --text-high: 208, 20%, 20%;
-        --bg: 228, 2%, 98%;
-        --bg-high: 228, 8%, 84%;
+        --text: 200 5% 37%;
+        --text-high: 200 15% 25%;
+        --bg: 34 25% 97%;
+        --bg-high: 34 20% 90%;
         --btn-text: white;
     }
 }
