update readme and version tag in docs

--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -7,7 +7,7 @@
     <title>Rauthy</title>
     <link rel="icon" href="./assets/rauthy_light.svg"/>
     <link rel="stylesheet" href="/auth/v1/theme/{{client_id}}/{{theme_ts}}"/>
-    <meta http-equiv="content-security-policy" content="default-src 'none'; connect-src 'self'; img-src 'self'; script-src 'self' 'wasm-unsafe-eval' 'sha256-d7+n5n58bG70HGGZO/XLeLOUlTyYYjgx2vmO7FHdV6c='; style-src 'self' 'unsafe-inline'">
+    <meta http-equiv="content-security-policy" content="default-src 'none'; connect-src 'self'; img-src 'self'; script-src 'self' 'wasm-unsafe-eval' 'sha256-4Ui5uS1trr0mmct6wI8G12Fgx+OWIIfNR9uP178dINs='; style-src 'self' 'unsafe-inline'">
 		<link href="./_app/immutable/assets/0.BgTF6zX-.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.Co9Ka4UE.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Button.B30wK1m9.css" rel="stylesheet">
@@ -16,10 +16,10 @@
 		<link href="./_app/immutable/assets/ThemeSwitch.DqWmA1Kg.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/LangSelector.U7YPPwhi.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Options.DhTNlbAJ.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.B2S40eBk.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/jml5CEqa.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CBglXAJj.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/gBicwBxv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BveBAmlr.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BbuxJI8y.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Biqh9VJ3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CmsKOCeN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CYCba2oX.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DKC5GJ29.js">
@@ -30,7 +30,7 @@
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.BdTp30JC.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Dv-Q3FDX.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/8R5My_LO.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/4.DUN_XrA9.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/4.d9ro8kjo.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DlLEcmNg.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Dql74IOz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DaM_1q3c.js">
@@ -40,12 +40,12 @@
 		<link rel="modulepreload" href="./_app/immutable/chunks/BO1A6s0c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B21bTIl7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BFgWaswG.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DNYXBAk_.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/VNO9NEE7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DdLeAElE.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BLE4FKaJ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Ds33nkO-.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DtT3Jahq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/B4oqfqbR.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CWDhTIVG.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/VqHJpFtz.js"><!--[--><!--]--><title>Rauthy</title>
 </head>
 <body>
@@ -60,7 +60,7 @@
 			
 			<script>
 				{
-					__sveltekit_yw9p2r = {
+					__sveltekit_z25lmd = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/auth/v1"
 					};
@@ -68,8 +68,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.B2S40eBk.js"),
-						import("./_app/immutable/entry/app.BbuxJI8y.js")
+						import("./_app/immutable/entry/start.CBglXAJj.js"),
+						import("./_app/immutable/entry/app.Biqh9VJ3.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
