--- a/templates/html/users/{id}/reset/reset.html
+++ b/templates/html/users/{id}/reset/reset.html
@@ -7,7 +7,7 @@
     <title>Rauthy</title>
     <link rel="icon" href="../../../assets/rauthy_light.svg"/>
     <link rel="stylesheet" href="/auth/v1/theme/{{client_id}}/{{theme_ts}}"/>
-    <meta http-equiv="content-security-policy" content="default-src 'none'; connect-src 'self'; img-src 'self'; script-src 'self' 'wasm-unsafe-eval' 'sha256-kMiokk5EbOo+Vw4LYxFQVpZ6U8nwjWA0c98+6UHi36s='; style-src 'self' 'unsafe-inline'">
+    <meta http-equiv="content-security-policy" content="default-src 'none'; connect-src 'self'; img-src 'self'; script-src 'self' 'wasm-unsafe-eval' 'sha256-ie9wV4eZeyGcCWZdW6gDVU/l6TIj0YzOgGY/52NQviY='; style-src 'self' 'unsafe-inline'">
 		<link href="../../../_app/immutable/assets/0.BgTF6zX-.css" rel="stylesheet">
 		<link href="../../../_app/immutable/assets/35.zU3i1GBi.css" rel="stylesheet">
 		<link href="../../../_app/immutable/assets/Button.B30wK1m9.css" rel="stylesheet">
@@ -21,10 +21,10 @@
 		<link href="../../../_app/immutable/assets/ThemeSwitch.DqWmA1Kg.css" rel="stylesheet">
 		<link href="../../../_app/immutable/assets/InputPassword.C2KOSbcl.css" rel="stylesheet">
 		<link href="../../../_app/immutable/assets/A.Dh1ywWRo.css" rel="stylesheet">
-		<link rel="modulepreload" href="../../../_app/immutable/entry/start.B2S40eBk.js">
-		<link rel="modulepreload" href="../../../_app/immutable/chunks/jml5CEqa.js">
+		<link rel="modulepreload" href="../../../_app/immutable/entry/start.CBglXAJj.js">
+		<link rel="modulepreload" href="../../../_app/immutable/chunks/gBicwBxv.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/BveBAmlr.js">
-		<link rel="modulepreload" href="../../../_app/immutable/entry/app.BbuxJI8y.js">
+		<link rel="modulepreload" href="../../../_app/immutable/entry/app.Biqh9VJ3.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/CmsKOCeN.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/CYCba2oX.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/DKC5GJ29.js">
@@ -35,7 +35,7 @@
 		<link rel="modulepreload" href="../../../_app/immutable/nodes/0.BdTp30JC.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/Dv-Q3FDX.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/8R5My_LO.js">
-		<link rel="modulepreload" href="../../../_app/immutable/nodes/35.D_gJOGra.js">
+		<link rel="modulepreload" href="../../../_app/immutable/nodes/35.CY4Nwch7.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/DlLEcmNg.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/Dql74IOz.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/B21bTIl7.js">
@@ -44,21 +44,21 @@
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/Ds33nkO-.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/BO1A6s0c.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/C3pTUZii.js">
-		<link rel="modulepreload" href="../../../_app/immutable/chunks/DNYXBAk_.js">
+		<link rel="modulepreload" href="../../../_app/immutable/chunks/VNO9NEE7.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/DdLeAElE.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/BLE4FKaJ.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/DtT3Jahq.js">
-		<link rel="modulepreload" href="../../../_app/immutable/chunks/B4oqfqbR.js">
+		<link rel="modulepreload" href="../../../_app/immutable/chunks/CWDhTIVG.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/VqHJpFtz.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/DaM_1q3c.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/Ci6f1shh.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/CDuWpfYL.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/NJ3e7ymm.js">
-		<link rel="modulepreload" href="../../../_app/immutable/chunks/BdFU-gNS.js">
+		<link rel="modulepreload" href="../../../_app/immutable/chunks/B1vDXICW.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/BFgWaswG.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/CUO8Plwh.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/BKI7vHi6.js">
-		<link rel="modulepreload" href="../../../_app/immutable/chunks/BoQH-Qa9.js">
+		<link rel="modulepreload" href="../../../_app/immutable/chunks/Disq-B0L.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/BH-05F4S.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/BguaNybM.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/DswDW5U8.js">
@@ -76,7 +76,7 @@
 			
 			<script>
 				{
-					__sveltekit_yw9p2r = {
+					__sveltekit_z25lmd = {
 						base: new URL("../../..", location).pathname.slice(0, -1),
 						assets: "/auth/v1"
 					};
@@ -84,8 +84,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../../../_app/immutable/entry/start.B2S40eBk.js"),
-						import("../../../_app/immutable/entry/app.BbuxJI8y.js")
+						import("../../../_app/immutable/entry/start.CBglXAJj.js"),
+						import("../../../_app/immutable/entry/app.Biqh9VJ3.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 35],
