--- a/templates/html/account.html
+++ b/templates/html/account.html
@@ -7,7 +7,7 @@
     <title>Rauthy</title>
     <link rel="icon" href="./assets/rauthy_light.svg"/>
     <link rel="stylesheet" href="/auth/v1/theme/{{client_id}}/{{theme_ts}}"/>
-    <meta http-equiv="content-security-policy" content="default-src 'none'; connect-src 'self'; img-src 'self'; script-src 'self' 'wasm-unsafe-eval' 'sha256-O1f54DRIDDH/KTF969qkMraWe6UGMnBRVWICpe1GQmo='; style-src 'self' 'unsafe-inline'">
+    <meta http-equiv="content-security-policy" content="default-src 'none'; connect-src 'self'; img-src 'self'; script-src 'self' 'wasm-unsafe-eval' 'sha256-LhhC+u7xZ+Qv5OK4fCb+jsBB5LnqasokvenoMGXZ9UU='; style-src 'self' 'unsafe-inline'">
 		<link href="./_app/immutable/assets/0.BgTF6zX-.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/5.hWEyy4Y6.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Button.B30wK1m9.css" rel="stylesheet">
@@ -30,10 +30,10 @@
 		<link href="./_app/immutable/assets/ContentCenter.CgrtcW8D.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/ThemeSwitch.DqWmA1Kg.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/LangSelector.U7YPPwhi.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.B2S40eBk.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/jml5CEqa.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CBglXAJj.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/gBicwBxv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BveBAmlr.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BbuxJI8y.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Biqh9VJ3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CmsKOCeN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CYCba2oX.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DKC5GJ29.js">
@@ -44,7 +44,7 @@
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.BdTp30JC.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Dv-Q3FDX.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/8R5My_LO.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/5.BnLrwunS.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/5.Dcz1HDTe.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Dql74IOz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DpR-4P2Y.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B21bTIl7.js">
@@ -77,18 +77,18 @@
 		<link rel="modulepreload" href="./_app/immutable/chunks/C3pTUZii.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CpbwoRiQ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CUO8Plwh.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BoQH-Qa9.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/B4oqfqbR.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Disq-B0L.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CWDhTIVG.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Cv33Ea-7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CDuWpfYL.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/NJ3e7ymm.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BdFU-gNS.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/B1vDXICW.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BGiCnx1L.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BVxkLPhB.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DaM_1q3c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Ci6f1shh.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BFgWaswG.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DNYXBAk_.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/VNO9NEE7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/VqHJpFtz.js"><!--[--><!--]--><title>User Account </title>
 </head>
 <body>
@@ -103,7 +103,7 @@
 			
 			<script>
 				{
-					__sveltekit_yw9p2r = {
+					__sveltekit_z25lmd = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/auth/v1"
 					};
@@ -111,8 +111,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.B2S40eBk.js"),
-						import("./_app/immutable/entry/app.BbuxJI8y.js")
+						import("./_app/immutable/entry/start.CBglXAJj.js"),
+						import("./_app/immutable/entry/app.Biqh9VJ3.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
