--- a/templates/html/admin/config/policy.html
+++ b/templates/html/admin/config/policy.html
@@ -7,7 +7,7 @@
     <title>Rauthy</title>
     <link rel="icon" href="../../assets/rauthy_light.svg"/>
     <link rel="stylesheet" href="/auth/v1/theme/{{client_id}}/{{theme_ts}}"/>
-    <meta http-equiv="content-security-policy" content="default-src 'none'; connect-src 'self'; img-src 'self'; script-src 'self' 'wasm-unsafe-eval' 'sha256-gCuxZJq5tvPAFOVkm7pyqBFKKZMwzJKa79VSDoMx5g8='; style-src 'self' 'unsafe-inline'">
+    <meta http-equiv="content-security-policy" content="default-src 'none'; connect-src 'self'; img-src 'self'; script-src 'self' 'wasm-unsafe-eval' 'sha256-R5rmbm6Z7q+s3l/Ins66IaFKThbg2QcNmPo285/n954='; style-src 'self' 'unsafe-inline'">
 		<link href="../../_app/immutable/assets/0.BgTF6zX-.css" rel="stylesheet">
 		<link href="../../_app/immutable/assets/2.CuFA85UG.css" rel="stylesheet">
 		<link href="../../_app/immutable/assets/Main.t55ZbI3J.css" rel="stylesheet">
@@ -23,10 +23,10 @@
 		<link href="../../_app/immutable/assets/ContentAdmin.BLfkWbjo.css" rel="stylesheet">
 		<link href="../../_app/immutable/assets/14.DOlHIbwb.css" rel="stylesheet">
 		<link href="../../_app/immutable/assets/pow.CVii6IAo.css" rel="stylesheet">
-		<link rel="modulepreload" href="../../_app/immutable/entry/start.B2S40eBk.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/jml5CEqa.js">
+		<link rel="modulepreload" href="../../_app/immutable/entry/start.CBglXAJj.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/gBicwBxv.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/BveBAmlr.js">
-		<link rel="modulepreload" href="../../_app/immutable/entry/app.BbuxJI8y.js">
+		<link rel="modulepreload" href="../../_app/immutable/entry/app.Biqh9VJ3.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/CmsKOCeN.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/CYCba2oX.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/DKC5GJ29.js">
@@ -37,30 +37,30 @@
 		<link rel="modulepreload" href="../../_app/immutable/nodes/0.BdTp30JC.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/Dv-Q3FDX.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/8R5My_LO.js">
-		<link rel="modulepreload" href="../../_app/immutable/nodes/2.BrW2QBIE.js">
+		<link rel="modulepreload" href="../../_app/immutable/nodes/2.CjsUZS4-.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/CJj8kriY.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/DpR-4P2Y.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/DaM_1q3c.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/DlLEcmNg.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/Dql74IOz.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/BFgWaswG.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/DNYXBAk_.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/VNO9NEE7.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/B21bTIl7.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/DdLeAElE.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/BLE4FKaJ.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/Ds33nkO-.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/DtT3Jahq.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/BO1A6s0c.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/B4oqfqbR.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/CWDhTIVG.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/VqHJpFtz.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/CE9vlfyw.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/BoQH-Qa9.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/Disq-B0L.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/B7o5HlxY.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/BVxkLPhB.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/B100j8aI.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/CPBhBTQd.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/DrjVqrGm.js">
-		<link rel="modulepreload" href="../../_app/immutable/nodes/3.DQb20EQS.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/k2Hk1K7x.js">
+		<link rel="modulepreload" href="../../_app/immutable/nodes/3.DkqHeNJv.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/DLHOTAgm.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/CqiL-eHy.js">
 		<link rel="modulepreload" href="../../_app/immutable/nodes/14.Cmx0YPL7.js">
@@ -79,7 +79,7 @@
 			
 			<script>
 				{
-					__sveltekit_yw9p2r = {
+					__sveltekit_z25lmd = {
 						base: new URL("../..", location).pathname.slice(0, -1),
 						assets: "/auth/v1"
 					};
@@ -87,8 +87,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../../_app/immutable/entry/start.B2S40eBk.js"),
-						import("../../_app/immutable/entry/app.BbuxJI8y.js")
+						import("../../_app/immutable/entry/start.CBglXAJj.js"),
+						import("../../_app/immutable/entry/app.Biqh9VJ3.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2, 3, 14],
