--- a/templates/html/device.html
+++ b/templates/html/device.html
@@ -7,7 +7,7 @@
     <title>Rauthy</title>
     <link rel="icon" href="./assets/rauthy_light.svg"/>
     <link rel="stylesheet" href="/auth/v1/theme/{{client_id}}/{{theme_ts}}"/>
-    <meta http-equiv="content-security-policy" content="default-src 'none'; connect-src 'self'; img-src 'self'; script-src 'self' 'wasm-unsafe-eval' 'sha256-5ja07Zx8I4ITvwtUG5MsUAPqGZeYdrUz9DzjKaQXzAo='; style-src 'self' 'unsafe-inline'">
+    <meta http-equiv="content-security-policy" content="default-src 'none'; connect-src 'self'; img-src 'self'; script-src 'self' 'wasm-unsafe-eval' 'sha256-Pv8hJ7yyHDFV87xexCpf2kBuutWuCIHXtWM4j7A7X+w='; style-src 'self' 'unsafe-inline'">
 		<link href="./_app/immutable/assets/0.BgTF6zX-.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/23.D7TAm3C0.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/LangSelector.U7YPPwhi.css" rel="stylesheet">
@@ -17,10 +17,10 @@
 		<link href="./_app/immutable/assets/Main.t55ZbI3J.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/ContentCenter.CgrtcW8D.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/ThemeSwitch.DqWmA1Kg.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.B2S40eBk.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/jml5CEqa.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CBglXAJj.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/gBicwBxv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BveBAmlr.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BbuxJI8y.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Biqh9VJ3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CmsKOCeN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CYCba2oX.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DKC5GJ29.js">
@@ -31,24 +31,24 @@
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.BdTp30JC.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Dv-Q3FDX.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/8R5My_LO.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/23.DqROhv1Z.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/23.Dij6DITN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BLE4FKaJ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B21bTIl7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DNYXBAk_.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/VNO9NEE7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Dql74IOz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DdLeAElE.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Ds33nkO-.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DlLEcmNg.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DtT3Jahq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BO1A6s0c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/B4oqfqbR.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CWDhTIVG.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/VqHJpFtz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CCQyB9gY.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DaM_1q3c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Ci6f1shh.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CDuWpfYL.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/NJ3e7ymm.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BdFU-gNS.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/B1vDXICW.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BFgWaswG.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BRCxk8by.js"><!--[--><!--]--><title>Device Authorization</title>
 </head>
@@ -64,7 +64,7 @@
 			
 			<script>
 				{
-					__sveltekit_yw9p2r = {
+					__sveltekit_z25lmd = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/auth/v1"
 					};
@@ -72,8 +72,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.B2S40eBk.js"),
-						import("./_app/immutable/entry/app.BbuxJI8y.js")
+						import("./_app/immutable/entry/start.CBglXAJj.js"),
+						import("./_app/immutable/entry/app.Biqh9VJ3.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 23],
