--- a/templates/html/fedcm.html
+++ b/templates/html/fedcm.html
@@ -7,17 +7,17 @@
     <title>Rauthy</title>
     <link rel="icon" href="./assets/rauthy_light.svg"/>
     <link rel="stylesheet" href="/auth/v1/theme/{{client_id}}/{{theme_ts}}"/>
-    <meta http-equiv="content-security-policy" content="default-src 'none'; connect-src 'self'; img-src 'self'; script-src 'self' 'wasm-unsafe-eval' 'sha256-huv8t6FURMCBhLRd/rXYmKG2zo0WNyJv7QIXRhEIgk4='; style-src 'self' 'unsafe-inline'">
+    <meta http-equiv="content-security-policy" content="default-src 'none'; connect-src 'self'; img-src 'self'; script-src 'self' 'wasm-unsafe-eval' 'sha256-JH5tePmcNE3tLBnvmaj5mF4VhQVjwr/Dc2nRob0chYg='; style-src 'self' 'unsafe-inline'">
 		<link href="./_app/immutable/assets/0.BgTF6zX-.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/28.BGsNSr6e.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Button.B30wK1m9.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/pow.CVii6IAo.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Main.t55ZbI3J.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/ContentCenter.CgrtcW8D.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.B2S40eBk.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/jml5CEqa.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CBglXAJj.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/gBicwBxv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BveBAmlr.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BbuxJI8y.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Biqh9VJ3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CmsKOCeN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CYCba2oX.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DKC5GJ29.js">
@@ -54,7 +54,7 @@
 			
 			<script>
 				{
-					__sveltekit_yw9p2r = {
+					__sveltekit_z25lmd = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/auth/v1"
 					};
@@ -62,8 +62,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.B2S40eBk.js"),
-						import("./_app/immutable/entry/app.BbuxJI8y.js")
+						import("./_app/immutable/entry/start.CBglXAJj.js"),
+						import("./_app/immutable/entry/app.Biqh9VJ3.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 28],
