--- a/templates/html/oidc/callback.html
+++ b/templates/html/oidc/callback.html
@@ -7,12 +7,12 @@
     <title>Rauthy</title>
     <link rel="icon" href="../assets/rauthy_light.svg"/>
     <link rel="stylesheet" href="/auth/v1/theme/{{client_id}}/{{theme_ts}}"/>
-    <meta http-equiv="content-security-policy" content="default-src 'none'; connect-src 'self'; img-src 'self'; script-src 'self' 'wasm-unsafe-eval' 'sha256-G8CskFpmZl8J018Jhn35ZYXtNlE/pXryq8Dl67999UU='; style-src 'self' 'unsafe-inline'">
+    <meta http-equiv="content-security-policy" content="default-src 'none'; connect-src 'self'; img-src 'self'; script-src 'self' 'wasm-unsafe-eval' 'sha256-zk4Zh44bVRh7DMMx8UQtCiP7Mpn2hzH84Yygftb2hz8='; style-src 'self' 'unsafe-inline'">
 		<link href="../_app/immutable/assets/0.BgTF6zX-.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.B2S40eBk.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/jml5CEqa.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.CBglXAJj.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/gBicwBxv.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/BveBAmlr.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.BbuxJI8y.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.Biqh9VJ3.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CmsKOCeN.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CYCba2oX.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/DKC5GJ29.js">
@@ -23,9 +23,9 @@
 		<link rel="modulepreload" href="../_app/immutable/nodes/0.BdTp30JC.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Dv-Q3FDX.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/8R5My_LO.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/30.BSDW_wEk.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/30.K95w2qaQ.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/B21bTIl7.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/BdFU-gNS.js"><!--[--><!--]--><title>Callback</title>
+		<link rel="modulepreload" href="../_app/immutable/chunks/B1vDXICW.js"><!--[--><!--]--><title>Callback</title>
 </head>
 <body>
 <div class="hidden" aria-hidden="true">
@@ -37,7 +37,7 @@
 			
 			<script>
 				{
-					__sveltekit_yw9p2r = {
+					__sveltekit_z25lmd = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						assets: "/auth/v1"
 					};
@@ -45,8 +45,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../_app/immutable/entry/start.B2S40eBk.js"),
-						import("../_app/immutable/entry/app.BbuxJI8y.js")
+						import("../_app/immutable/entry/start.CBglXAJj.js"),
+						import("../_app/immutable/entry/app.Biqh9VJ3.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 30],
