--- a/templates/html/users/{id}/email_confirm/email_confirm.html
+++ b/templates/html/users/{id}/email_confirm/email_confirm.html
@@ -7,7 +7,7 @@
     <title>Rauthy</title>
     <link rel="icon" href="../../../assets/rauthy_light.svg"/>
     <link rel="stylesheet" href="/auth/v1/theme/{{client_id}}/{{theme_ts}}"/>
-    <meta http-equiv="content-security-policy" content="default-src 'none'; connect-src 'self'; img-src 'self'; script-src 'self' 'wasm-unsafe-eval' 'sha256-Wa+Yt1bDPB7DOmjww1AKoUMO57/rkpH2iXFog06vgGg='; style-src 'self' 'unsafe-inline'">
+    <meta http-equiv="content-security-policy" content="default-src 'none'; connect-src 'self'; img-src 'self'; script-src 'self' 'wasm-unsafe-eval' 'sha256-vExFwbzzACCYkvuoeJIvyIZgzXyVrutBWc3lE7R0/jQ='; style-src 'self' 'unsafe-inline'">
 		<link href="../../../_app/immutable/assets/0.BgTF6zX-.css" rel="stylesheet">
 		<link href="../../../_app/immutable/assets/34.D1v94sLe.css" rel="stylesheet">
 		<link href="../../../_app/immutable/assets/LangSelector.U7YPPwhi.css" rel="stylesheet">
@@ -16,10 +16,10 @@
 		<link href="../../../_app/immutable/assets/Main.t55ZbI3J.css" rel="stylesheet">
 		<link href="../../../_app/immutable/assets/ContentCenter.CgrtcW8D.css" rel="stylesheet">
 		<link href="../../../_app/immutable/assets/ThemeSwitch.DqWmA1Kg.css" rel="stylesheet">
-		<link rel="modulepreload" href="../../../_app/immutable/entry/start.B2S40eBk.js">
-		<link rel="modulepreload" href="../../../_app/immutable/chunks/jml5CEqa.js">
+		<link rel="modulepreload" href="../../../_app/immutable/entry/start.CBglXAJj.js">
+		<link rel="modulepreload" href="../../../_app/immutable/chunks/gBicwBxv.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/BveBAmlr.js">
-		<link rel="modulepreload" href="../../../_app/immutable/entry/app.BbuxJI8y.js">
+		<link rel="modulepreload" href="../../../_app/immutable/entry/app.Biqh9VJ3.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/CmsKOCeN.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/CYCba2oX.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/DKC5GJ29.js">
@@ -30,8 +30,8 @@
 		<link rel="modulepreload" href="../../../_app/immutable/nodes/0.BdTp30JC.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/Dv-Q3FDX.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/8R5My_LO.js">
-		<link rel="modulepreload" href="../../../_app/immutable/nodes/34.D8bHSHtP.js">
-		<link rel="modulepreload" href="../../../_app/immutable/chunks/DNYXBAk_.js">
+		<link rel="modulepreload" href="../../../_app/immutable/nodes/34.BD746x7z.js">
+		<link rel="modulepreload" href="../../../_app/immutable/chunks/VNO9NEE7.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/Dql74IOz.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/B21bTIl7.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/DdLeAElE.js">
@@ -40,7 +40,7 @@
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/DlLEcmNg.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/DtT3Jahq.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/BO1A6s0c.js">
-		<link rel="modulepreload" href="../../../_app/immutable/chunks/B4oqfqbR.js">
+		<link rel="modulepreload" href="../../../_app/immutable/chunks/CWDhTIVG.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/VqHJpFtz.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/DaM_1q3c.js">
 		<link rel="modulepreload" href="../../../_app/immutable/chunks/Ci6f1shh.js">
@@ -60,7 +60,7 @@
 			
 			<script>
 				{
-					__sveltekit_yw9p2r = {
+					__sveltekit_z25lmd = {
 						base: new URL("../../..", location).pathname.slice(0, -1),
 						assets: "/auth/v1"
 					};
@@ -68,8 +68,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../../../_app/immutable/entry/start.B2S40eBk.js"),
-						import("../../../_app/immutable/entry/app.BbuxJI8y.js")
+						import("../../../_app/immutable/entry/start.CBglXAJj.js"),
+						import("../../../_app/immutable/entry/app.Biqh9VJ3.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 34],
