--- a/templates/email/base.html
+++ b/templates/email/base.html
@@ -54,6 +54,15 @@
         box-shadow: 1px 1px 2px hsl(var(--bg-high));
     }
 
+    a[data-faded="true"] {
+        border: 1px solid hsl(var(--action));
+        background-color: hsl(var(--bg));
+    }
+
+    footer {
+        margin-top: 1.25rem;
+    }
+
     h1, h2, h3, h4, h5, h6 {
         color: hsl(var(--text-high));
         overflow-wrap: break-word;
