fix email faded button color

--- a/templates/email/base.html
+++ b/templates/email/base.html
@@ -56,7 +56,7 @@
 
     a[data-faded="true"] {
         border: 1px solid hsl(var(--action));
-        color: var(--action);
+        color: hsl(var(--action));
         background-color: hsl(var(--bg));
     }
 
