reduce `max_line_length` down to `100`

--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -179,7 +179,9 @@ li {
 }
 
 .font-mono {
-    font-family: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace;
+    font-family:
+        ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono',
+        monospace;
 }
 
 .absolute {
