fix: re-add pre style to global.css

--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -353,6 +353,10 @@ input:disabled {
     cursor: not-allowed;
 }
 
+pre {
+    background: hsl(var(--bg-high));
+}
+
 .html-render {
     display: block;
     line-height: 1.5rem;
